Always return long long variants from integer qjsonvalue

Makes the return type from the simple toVariant match the nested
versions.

Fixes: QTBUG-85808
Change-Id: Ib44213f062ac4de0cdb29fb20729e965351cf852
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>